use getlib-build.properties
git-svn-id: https://svn.exedio.com/cope/trunk/cops@13015 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/getlib.properties
+++ b/getlib.properties
@@ -1,11 +1,8 @@
 #
-# This file specifies which versions of which libraries used by cops.
+# This file specifies which versions of which libraries used by cops and depending projects.
 #
 # key: jar file name
 # value: Specification-Version / cruise build version time, needs to be formatted as double
 
 commons-fileupload = 1.1
 commons-io = 1.1
-
-#cruise build 14
-exedio-jspm = 20081208110233
