--- a/build.xml
+++ b/build.xml
@@ -28,6 +28,7 @@
 				<pathelement location="lib/servlet-api.jar" />
 				<pathelement location="lib/commons-fileupload.jar" />
 				<pathelement location="lib/commons-io.jar" />
+				<pathelement location="lib/exedio-cope-util.jar" />
 			</classpath>
 			<compilerarg value="-encoding" />
 			<compilerarg value="ascii" />
@@ -81,6 +82,7 @@
 				<pathelement location="build/testclasses" />
 				<pathelement location="lib/junit.jar" />
 				<pathelement location="lib/servlet-api.jar" />
+				<pathelement location="lib/exedio-cope-util.jar" />
 			</classpath>
 			<test name="com.exedio.cops.PackageTest" todir="build/testresults" outfile="cops" />
 			<assertions><enable/></assertions>
@@ -132,6 +134,7 @@
 			<classpath>
 				<pathelement location="build/classes" />
 				<pathelement location="lib/servlet-api.jar" />
+				<pathelement location="lib/exedio-cope-util.jar" />
 			</classpath>
 			<compilerarg value="-Xlint" />
 			<compilerarg value="-encoding" />
@@ -148,6 +151,11 @@
 	<target name="example.web" depends="compile, catalina.compile, example.compile">
 		<mkdir dir="example/web/files" />
 		<touch file="example/web/files/hallo.txt" />
+		<copy todir="example/web/WEB-INF/lib">
+			<fileset dir="lib">
+				<include name="exedio-cope-util.jar" />
+			</fileset>
+		</copy>
 		<copy todir="example/web/WEB-INF/classes">
 			<fileset dir="build/classes" />
 			<fileset dir="build/exampleclasses" />
@@ -288,6 +296,7 @@
 		<delete dir="build" />
 		<delete dir="tomcat" />
 		<delete dir="example/web/files" />
+		<delete dir="example/web/WEB-INF/lib" />
 		<delete dir="example/web/WEB-INF/classes" />
 		<delete>
 			<fileset dir="src">
