fix javadoc warnings after r14743: use XMLEncoder from cope-util
git-svn-id: https://svn.exedio.com/cope/trunk/cops@14755 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -337,6 +337,7 @@
 			<classpath>
 				<pathelement location="lib/servlet-api.jar" />
 				<pathelement location="lib/commons-fileupload.jar" />
+				<pathelement location="lib/exedio-cope-util.jar" />
 			</classpath>
 		</javadoc>
 	</target>
