add PropertiesServlet, TODO: use official jspm version
git-svn-id: https://svn.exedio.com/cope/trunk/cops@14756 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -12,7 +12,15 @@
 	
 	<target name="runtime.jspm">
 		<jspm method="print">
-			<fileset dir="src" includes="**/*.jspm" />
+			<fileset dir="src">
+				<include name="**/*.jspm" />
+				<exclude name="com/exedio/cops/Properties.jspm" />
+			</fileset>
+		</jspm>
+		<jspm>
+			<fileset dir="src">
+				<include name="com/exedio/cops/Properties.jspm" />
+			</fileset>
 		</jspm>
 	</target>
 	
@@ -33,6 +41,12 @@
 			<compilerarg value="-encoding" />
 			<compilerarg value="ascii" />
 		</javac>
+		<copy todir="build/classes">
+			<fileset dir="src">
+				<include name="**/*.css" />
+				<include name="**/*.png" />
+			</fileset>
+		</copy>
 	</target>
 	
 	<target name="catalina.compile">
