use <taskdef resource=com/exedio/jspm/ant.properties />
git-svn-id: https://svn.exedio.com/cope/trunk/cops@14757 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -6,8 +6,8 @@
 	
 	<taskdef classpath="lib/ant-contrib.jar" resource="net/sf/antcontrib/antcontrib.properties" />
 	
-	<taskdef name="jspm"
-				classname="com.exedio.jspm.AntTask"
+	<taskdef
+				resource="com/exedio/jspm/ant.properties"
 				classpath="lib/exedio-jspm.jar" />
 	
 	<target name="runtime.jspm">
