--- a/build.xml
+++ b/build.xml
@@ -372,4 +372,12 @@
 		<copy file="CHANGELOG" tofile="${basedir}/cruise/exedio-cops.jar-CHANGELOG" />
 	</target>
 	
+	<target name="hudson" depends="all">
+		<copy todir="${basedir}/build/success">
+			<fileset file="${basedir}/build/exedio-cops.jar" />
+			<fileset file="${basedir}/build/exedio-cops.jar-src.zip" />
+			<fileset file="${basedir}/build/exedio-cops-src-${build.file.tag}.tar.gz" />
+		</copy>
+	</target>
+
 </project>
