--- a/getlib-build.properties
+++ b/getlib-build.properties
@@ -4,4 +4,4 @@
 # key: jar file name
 # value: Specification-Version / cruise build version time, needs to be formatted as double
 
-exedio-jspm = 20091229220545
+exedio-jspm = 40
