remove target dist, is done by hudson itself much easier and faster
git-svn-id: https://svn.exedio.com/cope/trunk/cops@15816 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -4,7 +4,6 @@
 
 	<property file="local.properties" />
 	<property file="project.properties" />
-	<property name="build.file.tag" value="unlabeled" />
 	
 	<taskdef classpath="lib/ant-contrib.jar" resource="net/sf/antcontrib/antcontrib.properties" />
 	
@@ -282,39 +281,6 @@
 			</finally>
 		</trycatch>
 	</target>
-
-	<target name="dist.tar">
-		<mkdir dir="build" />
-		<echo file="build/build.number" message="${build.tag}" />
-		<tar destfile="build/exedio-cops-src-${build.file.tag}.tar.gz"
-				compression="gzip">
-			<tarfileset file="${basedir}/build/build.number" />
-			<tarfileset dir="${basedir}">
-				<exclude name="getlib/**" />
-				<exclude name="getlib.xml" />
-				<exclude name="getlib.properties" />
-				<exclude name="log.xml" /><!-- created by cruise -->
-				<exclude name=".eclipse-output/**" />
-				<exclude name="build/**" />
-				<exclude name="tomcat/**" />
-				<exclude name="example/web/WEB-INF/classes/**" />
-				<exclude name="api/**" />
-				<exclude name="cruise/**" />
-				<exclude name="**/*_Jspm.java" />
-			</tarfileset>
-		</tar>
-	</target>
-	
-	<target name="dist.test" depends="dist.tar">
-		<delete dir="build/dist-test" />
-		<mkdir dir="build/dist-test" />
-		<untar src="build/exedio-cops-src-${build.file.tag}.tar.gz"
-				dest="build/dist-test"
-				compression="gzip" />
-		<ant dir="build/dist-test" target="build" />
-	</target>
-	
-	<target name="dist" depends="dist.tar, dist.test" />
 	
 	<target name="clean">
 		<delete dir="build" />
@@ -369,7 +335,7 @@
 	<target name="jspm" depends="runtime.jspm, example.jspm" />
 	<target name="src" depends="jspm" description="creates all sources, so the IDE does not complain" />
 	<target name="build" depends="compile, catalina.compile, test, webtest, jar, example, api" />
-	<target name="all" depends="build, jar.src, dist" />
+	<target name="all" depends="build, jar.src" />
 	<target name="tomcat" depends="example.tomcat" />
 
 	<target name="cruise" depends="clean, all">
@@ -377,7 +343,6 @@
 			<fileset file="${basedir}/getlib.properties" />
 			<fileset file="${basedir}/build/exedio-cops.jar" />
 			<fileset file="${basedir}/build/exedio-cops.jar-src.zip" />
-			<fileset file="${basedir}/build/exedio-cops-src-${build.file.tag}.tar.gz" />
 		</copy>
 		<copy file="CHANGELOG" tofile="${basedir}/cruise/exedio-cops.jar-CHANGELOG" />
 	</target>
@@ -386,7 +351,6 @@
 		<copy todir="${basedir}/build/success">
 			<fileset file="${basedir}/build/exedio-cops.jar" />
 			<fileset file="${basedir}/build/exedio-cops.jar-src.zip" />
-			<fileset file="${basedir}/build/exedio-cops-src-${build.file.tag}.tar.gz" />
 		</copy>
 	</target>
 
