fix webtest for windows
git-svn-id: https://svn.exedio.com/cope/trunk/cops@15946 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -237,8 +237,11 @@
 		<trycatch>
 			<try>
 				<echo message="tomcat: starting ..." />
+				<condition property="catalina.executable" value="catalina.bat" else="catalina.sh">
+					<os family="windows" />
+				</condition>
 				<forget>
-					<exec executable="${basedir}/tomcat/bin/catalina.sh"
+					<exec executable="${basedir}/tomcat/bin/${catalina.executable}"
 							failonerror="true"
 							output="build/catalina-start.log">
 						<arg value="run" />
@@ -270,7 +273,7 @@
 			</try>
 			<finally>
 				<echo message="tomcat: stoping ..." />
-				<exec executable="${basedir}/tomcat/bin/catalina.sh"
+				<exec executable="${basedir}/tomcat/bin/${catalina.executable}"
 						failonerror="true"
 						output="build/catalina-stop.log">
 					<arg value="stop" />
