fix webtest for windows (2)
git-svn-id: https://svn.exedio.com/cope/trunk/cops@15947 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -241,7 +241,8 @@
 					<os family="windows" />
 				</condition>
 				<forget>
-					<exec executable="${basedir}/tomcat/bin/${catalina.executable}"
+					<exec dir="${basedir}/tomcat/bin"
+							executable="${basedir}/tomcat/bin/${catalina.executable}"
 							failonerror="true"
 							output="build/catalina-start.log">
 						<arg value="run" />
