--- a/build.xml
+++ b/build.xml
@@ -274,7 +274,8 @@
 			</try>
 			<finally>
 				<echo message="tomcat: stoping ..." />
-				<exec executable="${basedir}/tomcat/bin/${catalina.executable}"
+				<exec dir="${basedir}/tomcat/bin"
+						executable="${basedir}/tomcat/bin/${catalina.executable}"
 						failonerror="true"
 						output="build/catalina-stop.log">
 					<arg value="stop" />
