add shared resolver
git-svn-id: https://svn.exedio.com/cope/cops/branches/ivy@17780 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/ivy.xml
+++ b/ivy.xml
@@ -6,5 +6,6 @@
 	</publications>
 	<dependencies>
 		<dependency org="javax.servlet" name="servlet-api" rev="2.4" />
+		<dependency org="com.exedio" name="exedio-cope-util" rev="32" />
 	</dependencies>
 </ivy-module>
