--- a/ivy.xml
+++ b/ivy.xml
@@ -7,6 +7,7 @@
 	<dependencies>
 		<dependency org="javax.servlet" name="servlet-api" rev="2.4" />
 		<dependency org="junit" name="junit" rev="3.8" />
+		<dependency org="commons-fileupload" name="commons-fileupload" rev="1.1"/>
 		<dependency org="com.exedio" name="exedio-cope-util" rev="40" />
 	</dependencies>
 </ivy-module>
