--- a/ivy.xml
+++ b/ivy.xml
@@ -8,6 +8,7 @@
 		<dependency org="javax.servlet" name="servlet-api" rev="2.4" />
 		<dependency org="junit" name="junit" rev="3.8" />
 		<dependency org="commons-fileupload" name="commons-fileupload" rev="1.1"/>
+		<dependency org="commons-io" name="commons-io" rev="1.2"/>
 		<dependency org="com.exedio" name="exedio-cope-util" rev="40" />
 	</dependencies>
 </ivy-module>
