--- a/ivy.xml
+++ b/ivy.xml
@@ -1,7 +1,7 @@
 <ivy-module version="2.0">
 	<info
 			organisation="com.exedio"
-			module="exedio-cops">
+			module="cops">
 		<license
 				name="GNU Lesser General Public License, Version 2.1"
 				url="http://opensource.org/licenses/lgpl-license.html" />
@@ -15,6 +15,6 @@
 		<dependency org="junit" name="junit" rev="3.8" />
 		<dependency org="commons-fileupload" name="commons-fileupload" rev="1.1"/>
 		<dependency org="commons-io" name="commons-io" rev="1.2"/>
-		<dependency org="com.exedio" name="exedio-cope-util" rev="44" />
+		<dependency org="com.exedio" name="copeutil" rev="45" />
 	</dependencies>
 </ivy-module>
