really set dependencies
git-svn-id: https://svn.exedio.com/cope/cops/branches/ivy@17903 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/ivy/build.xml
+++ b/ivy/build.xml
@@ -10,5 +10,6 @@
 		<ivy:retrieve file="../ivy.xml" pattern="artifacts/[artifact]-[revision]-[type].[ext]" />
 	</target>
 	<target name="copy" depends="resolve">
+		<copy file="artifacts/junit-4.4-jar.jar" tofile="../lib/junit.jar" overwrite="true" />
 	</target>
 </project>
