--- a/ivy.xml
+++ b/ivy.xml
@@ -6,15 +6,18 @@
 				name="GNU Lesser General Public License, Version 2.1"
 				url="http://opensource.org/licenses/lgpl-license.html" />
 	</info>
+	<configurations>
+		<conf name="runtime" />
+		<conf name="build" extends="runtime" visibility="private" />
+	</configurations>
 	<publications>
-		<artifact name="exedio-cops.jar" />
-		<artifact name="exedio-cope.jar-src.zip" type="source" ext="zip" />
+		<artifact name="exedio-cops" />
+		<artifact name="exedio-cops" type="src" ext="zip" />
+		<artifact name="exedio-cops" type="log" ext="txt" />
 	</publications>
 	<dependencies>
 		<dependency org="javax.servlet" name="servlet-api" rev="2.4" />
-		<dependency org="junit" name="junit" rev="3.8" />
-		<dependency org="commons-fileupload" name="commons-fileupload" rev="1.1" />
-		<dependency org="commons-io" name="commons-io" rev="1.2" />
+		<dependency org="junit" name="junit" rev="4.4" conf="build->default" />
 		<dependency org="com.exedio" name="copeutil" rev="160" />
 	</dependencies>
 </ivy-module>
