publish ivy artifacts
git-svn-id: https://svn.exedio.com/cope/cops/branches/ivy@17905 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/ivy.xml
+++ b/ivy.xml
@@ -1,7 +1,8 @@
 <ivy-module version="2.0">
 	<info
 			organisation="com.exedio"
-			module="cops">
+			module="cops"
+			revision="@BUILD_REVISION@">
 		<license
 				name="GNU Lesser General Public License, Version 2.1"
 				url="http://opensource.org/licenses/lgpl-license.html" />
