--- a/build.xml
+++ b/build.xml
@@ -372,6 +372,15 @@
 			<fileset file="${basedir}/build/exedio-cops.jar" />
 			<fileset file="${basedir}/build/exedio-cops.jar-src.zip" />
 		</copy>
+		<copy file="ivy.xml" tofile="build/success/ivy.xml" overwrite="true">
+			<filterset>
+				<filter token="BUILD_REVISION" value="${build.revision}" />
+			</filterset>
+		</copy>
+		<copy tofile="${basedir}/build/success/exedio-cops-src.zip"
+				file="${basedir}/build/exedio-cops.jar-src.zip" />
+		<copy tofile="${basedir}/build/success/exedio-cops-log.txt"
+				file="CHANGELOG" />
 	</target>
 
 </project>
