--- a/ivy.xml
+++ b/ivy.xml
@@ -20,5 +20,6 @@
 		<dependency org="javax.servlet" name="servlet-api" rev="2.4" />
 		<dependency org="junit" name="junit" rev="4.4" conf="build->default" />
 		<dependency org="com.exedio" name="copeutil" rev="160" />
+		<dependency org="com.exedio" name="jspm"     rev= "89" conf="build->runtime" />
 	</dependencies>
 </ivy-module>
