--- a/ivy/build.xml
+++ b/ivy/build.xml
@@ -1,14 +1,6 @@
 <?xml version="1.0"?>
-<project
-		xmlns:ivy="antlib:org.apache.ivy.ant"
-		name="ivy"
-		default="copy">
-	<ivy:settings file="settings.xml" />
-	<target name="resolve">
-		<delete dir="artifacts" />
-		<mkdir dir="artifacts" />
-		<ivy:retrieve file="../ivy.xml" pattern="artifacts/[artifact]-[revision]-[type].[ext]" />
-	</target>
+<project name="ivy" default="copy">
+	<import file="common.xml" />
 	<target name="copy" depends="resolve">
 		<copy overwrite="true" file="artifacts/exedio-cope-util-160-jar.jar" tofile="../lib/exedio-cope-util.jar" />
 		<copy overwrite="true" file="artifacts/exedio-cope-util-160-log.txt" tofile="../lib/exedio-cope-util.jar-CHANGELOG" />
