--- a/ivy/build.xml
+++ b/ivy/build.xml
@@ -2,13 +2,13 @@
 <project name="ivy" default="copy">
 	<import file="common.xml" />
 	<target name="copy" depends="resolve">
-		<copy overwrite="true" file="artifacts/exedio-cope-util-160-jar.jar" tofile="../lib/exedio-cope-util.jar" />
-		<copy overwrite="true" file="artifacts/exedio-cope-util-160-log.txt" tofile="../lib/exedio-cope-util.jar-CHANGELOG" />
-		<copy overwrite="true" file="artifacts/exedio-cope-util-160-src.zip" tofile="../lib/exedio-cope-util.jar-src.zip" />
-		<copy overwrite="true" file="artifacts/exedio-jspm-89-jar.jar" tofile="../lib/exedio-jspm.jar" />
-		<copy overwrite="true" file="artifacts/exedio-jspm-89-log.txt" tofile="../lib/exedio-jspm.jar-CHANGELOG" />
-		<copy overwrite="true" file="artifacts/servlet-api-2.4-jar.jar" tofile="../lib/servlet-api.jar" />
-		<copy overwrite="true" file="artifacts/servlet-api-2.4-source.jar" tofile="../lib/../lib/servlet-api.jar-src.zip" />
-		<copy overwrite="true" file="artifacts/junit-4.4-jar.jar" tofile="../lib/junit.jar" />
+		<copy overwrite="true" file="artifacts/exedio-cope-util-jar.jar" tofile="../lib/exedio-cope-util.jar" />
+		<copy overwrite="true" file="artifacts/exedio-cope-util-log.txt" tofile="../lib/exedio-cope-util.jar-CHANGELOG" />
+		<copy overwrite="true" file="artifacts/exedio-cope-util-src.zip" tofile="../lib/exedio-cope-util.jar-src.zip" />
+		<copy overwrite="true" file="artifacts/exedio-jspm-jar.jar" tofile="../lib/exedio-jspm.jar" />
+		<copy overwrite="true" file="artifacts/exedio-jspm-log.txt" tofile="../lib/exedio-jspm.jar-CHANGELOG" />
+		<copy overwrite="true" file="artifacts/servlet-api-jar.jar" tofile="../lib/servlet-api.jar" />
+		<copy overwrite="true" file="artifacts/servlet-api-source.jar" tofile="../lib/../lib/servlet-api.jar-src.zip" />
+		<copy overwrite="true" file="artifacts/junit-jar.jar" tofile="../lib/junit.jar" />
 	</target>
 </project>
