ResourceStatus uses Out
git-svn-id: https://svn.exedio.com/cope/cops/trunk@18659 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -15,11 +15,13 @@
 		<jspm method="print">
 			<fileset dir="src">
 				<include name="**/*.jspm" />
+				<exclude name="com/exedio/cops/ResourceStatus.jspm" />
 				<exclude name="com/exedio/cops/Properties.jspm" />
 			</fileset>
 		</jspm>
 		<jspm>
 			<fileset dir="src">
+				<include name="com/exedio/cops/ResourceStatus.jspm" />
 				<include name="com/exedio/cops/Properties.jspm" />
 			</fileset>
 		</jspm>
