--- a/build.xml
+++ b/build.xml
@@ -124,7 +124,7 @@
 	
 	<target name="jar.src">
 		<mkdir dir="build" />
-		<zip destfile="build/exedio-cops.jar-src.zip" filesonly="true" whenempty="fail" duplicate="fail" level="9">
+		<zip destfile="build/exedio-cops-src.zip" filesonly="true" whenempty="fail" duplicate="fail" level="9">
 			<zipfileset dir="${basedir}/src">
 				<include name="**/*.java" />
 				<exclude name="**/*_Jspm.java" />
@@ -374,17 +374,14 @@
 	<target name="hudson" depends="all">
 		<copy todir="${basedir}/build/success">
 			<fileset file="${basedir}/build/exedio-cops.jar" />
-			<fileset file="${basedir}/build/exedio-cops.jar-src.zip" />
+			<fileset file="${basedir}/build/exedio-cops-src.zip" />
+			<fileset file="${basedir}/exedio-cops-log.txt" />
 		</copy>
 		<copy file="ivy.xml" tofile="build/success/ivy.xml" overwrite="true">
 			<filterset>
 				<filter token="BUILD_REVISION" value="${build.revision}" />
 			</filterset>
 		</copy>
-		<copy tofile="${basedir}/build/success/exedio-cops-src.zip"
-				file="${basedir}/build/exedio-cops.jar-src.zip" />
-		<copy tofile="${basedir}/build/success/exedio-cops-log.txt"
-				file="CHANGELOG" />
 	</target>
 
 </project>
