rename target hudson to jenkins
git-svn-id: https://svn.exedio.com/cope/cops/trunk@20460 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -371,7 +371,7 @@
 	<target name="all" depends="build, jar.src, findbugs" />
 	<target name="tomcat" depends="example.tomcat" />
 	
-	<target name="hudson" depends="all">
+	<target name="jenkins" depends="all">
 		<copy todir="${basedir}/build/success">
 			<fileset file="${basedir}/build/exedio-cops.jar" />
 			<fileset file="${basedir}/build/exedio-cops-src.zip" />
