PropertiesServlet: open text field on demand
git-svn-id: https://svn.exedio.com/cope/cops/trunk@21561 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -46,6 +46,7 @@
 		<copy todir="build/classes">
 			<fileset dir="src">
 				<include name="**/*.css" />
+				<include name="**/*.js" />
 				<include name="**/*.png" />
 			</fileset>
 		</copy>
