getDescription gets authentication and hostname
git-svn-id: https://svn.exedio.com/cope/cops/trunk@24638 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/example/web/WEB-INF/web.xml
+++ b/example/web/WEB-INF/web.xml
@@ -59,6 +59,10 @@
 		<servlet-name>properties</servlet-name>
 		<url-pattern>/properties/*</url-pattern>
 	</servlet-mapping>
+	<!--security-constraint>
+		<web-resource-collection><url-pattern>/properties/*</url-pattern></web-resource-collection>
+		<auth-constraint><role-name>manager</role-name></auth-constraint>
+	</security-constraint-->
 
 	<!-- don't know, why this is needed here,
 		  requestLimiter.html protects itself -->
