prepare testing with multiple PropertiesServlets
git-svn-id: https://svn.exedio.com/cope/cops/trunk@24666 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/example/web/WEB-INF/web.xml
+++ b/example/web/WEB-INF/web.xml
@@ -54,6 +54,10 @@
 	<servlet>
 		<servlet-name>properties</servlet-name>
 		<servlet-class>com.exedio.cops.example.PropertiesServlet</servlet-class>
+		<init-param>
+			<param-name>source</param-name>
+			<param-value>normal.properties</param-value>
+		</init-param>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>properties</servlet-name>
