disable includeAntRuntime for tests
git-svn-id: https://svn.exedio.com/cope/cops/trunk@26209 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -74,6 +74,7 @@
 		<mkdir dir="build/testclasses" />
 		<javac srcdir="testsrc"
 				destdir="build/testclasses"
+				includeAntRuntime="false"
 				deprecation="on"
 				debug="on"
 				optimize="off">
