--- a/build.xml
+++ b/build.xml
@@ -37,6 +37,7 @@
 				optimize="off">
 			<classpath>
 				<pathelement location="lib/servlet-api.jar" />
+				<pathelement location="lib/slf4j-api.jar" />
 				<pathelement location="lib/exedio-cope-util.jar" />
 			</classpath>
 			<compilerarg value="-Xlint" />
@@ -101,6 +102,9 @@
 				<pathelement location="build/testclasses" />
 				<pathelement location="lib/junit.jar" />
 				<pathelement location="lib/servlet-api.jar" />
+				<pathelement location="lib/slf4j-api.jar" />
+				<pathelement location="lib/slf4j-log4j12.jar" />
+				<pathelement location="lib/log4j-bundle.jar" />
 				<pathelement location="lib/exedio-cope-util.jar" />
 			</classpath>
 			<test name="com.exedio.cops.PackageTest" todir="build/testresults" outfile="cops" />
@@ -163,6 +167,7 @@
 			<fileset dir="example/src">
 				<include name="**/*.png" />
 				<include name="**/*.txt" />
+				<include name="**/*.properties" />
 			</fileset>
 		</copy>
 	</target>
@@ -173,6 +178,9 @@
 		<copy todir="example/web/WEB-INF/lib">
 			<fileset dir="lib">
 				<include name="exedio-cope-util.jar" />
+				<include name="slf4j-api.jar" />
+				<include name="slf4j-log4j12.jar" />
+				<include name="log4j-bundle.jar" />
 			</fileset>
 		</copy>
 		<copy todir="example/web/WEB-INF/classes">
