--- a/ivy/build.xml
+++ b/ivy/build.xml
@@ -10,5 +10,9 @@
 		<copy overwrite="true" file="artifacts/servlet-api-jar.jar" tofile="../lib/servlet-api.jar" />
 		<copy overwrite="true" file="artifacts/servlet-api-source.jar" tofile="../lib/../lib/servlet-api.jar-src.zip" />
 		<copy overwrite="true" file="artifacts/junit-jar.jar" tofile="../lib/junit.jar" />
+		<copy overwrite="true" file="artifacts/slf4j-api-jar.jar" tofile="../lib/slf4j-api.jar" />
+		<copy overwrite="true" file="artifacts/slf4j-api-source.jar" todir="../lib" />
+		<copy overwrite="true" file="artifacts/slf4j-log4j12-jar.jar" tofile="../lib/slf4j-log4j12.jar" />
+		<copy overwrite="true" file="artifacts/log4j-bundle.jar" todir="../lib" />
 	</target>
 </project>
