modern way of findbugs deployment
git-svn-id: https://svn.exedio.com/cope/cops/trunk@26236 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/project.properties
+++ b/project.properties
@@ -1,3 +1,11 @@
 tomcat.port.shutdown=8005
 tomcat.port.http=8080
 tomcat.port.https=8443
+
+
+# Switches output format of findbugs between html (human readable,
+# the default) and xml (for statistics)
+#
+findbugs.output=html
+#findbugs.output=xml
+
