--- a/build.xml
+++ b/build.xml
@@ -5,6 +5,8 @@
 	<property file="local.properties" />
 	<property file="project.properties" />
 	
+	<import file="macros/findbugs.xml" />
+	
 	<taskdef classpath="lib/ant-contrib.jar" resource="net/sf/antcontrib/antcontrib.properties" />
 	
 	<taskdef
@@ -348,21 +350,14 @@
 		</javadoc>
 	</target>
 	
-	<target name="findbugs" depends="compile">
-		<untar
-				compression="gzip"
-				src="${basedir}/lib/findbugs-1.3.9.tar.gz"
-				dest="${basedir}/build/findbugs-home" />
-		<taskdef
-				resource="edu/umd/cs/findbugs/anttask/tasks.properties"
-				classpath="build/findbugs-home/findbugs-1.3.9/lib/findbugs-ant.jar" />
+	<target name="findbugs" depends="compile, findbugs.taskdef">
 		<findbugs
-					home="${basedir}/build/findbugs-home/findbugs-1.3.9"
+					home="${basedir}/build/findbugs-home"
 					jvmargs="-Xmx250M"
 					failOnError="true"
 					warningsProperty="findbugs.warnings"
-					output="html"
-					outputFile="${basedir}/build/findbugs.html"
+					output="${findbugs.output}"
+					outputFile="${basedir}/build/findbugs.${findbugs.output}"
 					excludeFilter="findbugs-exclude.xml"
 					effort="max"
 					reportlevel="low">
@@ -372,7 +367,6 @@
 				<pathelement location="${basedir}/lib/servlet-api.jar" />
 			</auxclasspath>
 		</findbugs>
-		<fail if="findbugs.warnings" message="findbugs warnings" />
 	</target>
 	
 	<target name="jspm" depends="runtime.jspm, example.jspm" />
