switch to findbugs-2.0.1
git-svn-id: https://svn.exedio.com/cope/cops/trunk@26237 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/ivy.xml
+++ b/ivy.xml
@@ -27,6 +27,7 @@
 		</dependency>
 		<dependency org="org.slf4j" name="slf4j-log4j12" rev="1.6.4" conf="build->default" />
 		<dependency org="junit" name="junit" rev="4.4" conf="build->default" />
+		<dependency org="findbugs-x" name="findbugs" rev="2.0.1" conf="build->default" />
 		<dependency org="com.exedio" name="copeutil" rev="211" />
 		<dependency org="com.exedio" name="jspm"     rev= "89" conf="build->runtime" />
 	</dependencies>
