--- a/ivy/build.xml
+++ b/ivy/build.xml
@@ -14,5 +14,6 @@
 		<copy overwrite="true" file="artifacts/slf4j-api-source.jar" todir="../lib" />
 		<copy overwrite="true" file="artifacts/slf4j-log4j12-jar.jar" tofile="../lib/slf4j-log4j12.jar" />
 		<copy overwrite="true" file="artifacts/log4j-bundle.jar" todir="../lib" />
+		<copy overwrite="true" file="artifacts/findbugs-dist.tar.gz" tofile="../lib/findbugs.tar.gz" />
 	</target>
 </project>
