fix findbugs VO_VOLATILE_INCREMENT
git-svn-id: https://svn.exedio.com/cope/cops/trunk@26241 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/ivy/build.xml
+++ b/ivy/build.xml
@@ -15,5 +15,6 @@
 		<copy overwrite="true" file="artifacts/slf4j-log4j12-jar.jar" tofile="../lib/slf4j-log4j12.jar" />
 		<copy overwrite="true" file="artifacts/log4j-bundle.jar" todir="../lib" />
 		<copy overwrite="true" file="artifacts/findbugs-dist.tar.gz" tofile="../lib/findbugs.tar.gz" />
+		<copy overwrite="true" file="artifacts/findbugs-annotations-jar.jar" tofile="../lib/findbugs-annotations.jar" />
 	</target>
 </project>
