--- a/build.xml
+++ b/build.xml
@@ -41,6 +41,7 @@
 				<pathelement location="lib/servlet-api.jar" />
 				<pathelement location="lib/slf4j-api.jar" />
 				<pathelement location="lib/exedio-cope-util.jar" />
+				<pathelement location="lib/findbugs-annotations.jar" />
 			</classpath>
 			<compilerarg value="-Xlint" />
 			<compilerarg value="-encoding" />
@@ -346,6 +347,7 @@
 			<classpath>
 				<pathelement location="lib/servlet-api.jar" />
 				<pathelement location="lib/exedio-cope-util.jar" />
+				<pathelement location="lib/findbugs-annotations.jar" />
 			</classpath>
 		</javadoc>
 	</target>
