example for string.setToDefault (second attempt)
git-svn-id: https://svn.exedio.com/cope/cops/trunk@28605 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/example/web/WEB-INF/normal.properties
+++ b/example/web/WEB-INF/normal.properties
@@ -1,8 +1,10 @@
 smtp.host=mailgrab2.exedio.com
 string.set=value of string.set
 string.default.set=value of string.default.set
-string.setToDefault=value of string.setToDefault
 string.hidden=value of string.hidden
 string.hidden2=value of string.hidden2
 string.hidden3=value of string.hidden3
+setToDefault.string=value of setToDefault.string
+setToDefault.int=1234
+setToDefault.boolean=true
 orphaned=value of orphaned
