--- a/example/web/WEB-INF/normal.properties
+++ b/example/web/WEB-INF/normal.properties
@@ -7,4 +7,5 @@ string.hidden3=value of string.hidden3
 setToDefault.string=value of setToDefault.string
 setToDefault.int=1234
 setToDefault.boolean=true
-orphaned=value of orphaned
+orphaned1=value of orphaned
+orphaned2=value of orphaned
