rename hidden field, and specify one default value
git-svn-id: https://svn.exedio.com/cope/cops/trunk@28616 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/example/web/WEB-INF/normal.properties
+++ b/example/web/WEB-INF/normal.properties
@@ -1,9 +1,9 @@
 smtp.host=mailgrab2.exedio.com
 string.set=value of string.set
 string.default.set=value of string.default.set
-string.hidden=value of string.hidden
-string.hidden2=value of string.hidden2
-string.hidden3=value of string.hidden3
+hidden.1=value of hidden.1
+hidden.2=value of hidden.2
+hidden.3=value of hidden.3
 setToDefault.string=value of setToDefault.string
 setToDefault.int=1234
 setToDefault.boolean=true
