fix compiler warning about missing annotation
git-svn-id: https://svn.exedio.com/cope/cops/trunk@29595 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -162,6 +162,7 @@
 				<pathelement location="build/classes" />
 				<pathelement location="lib/servlet-api.jar" />
 				<pathelement location="lib/exedio-cope-util.jar" />
+				<pathelement location="lib/findbugs-annotations.jar" />
 			</classpath>
 			<compilerarg value="-Xlint" />
 			<compilerarg value="-encoding" />
