--- a/build.xml
+++ b/build.xml
@@ -332,6 +332,11 @@
 		<delete dir="api" />
 		<mkdir  dir="api" />
 
+		<condition property="api.doclint" value="-Xdoclint:all,-missing" else="-nosince"> <!-- nosince is just a dummy -->
+			<available classname="java.util.Optional" /> <!-- available since JDK 1.8 -->
+		</condition>
+		<echo message="doclint //${api.doclint}//" />
+
 		<javadoc
 				sourcepath="src"
 				destdir="api"
@@ -350,6 +355,7 @@
 			<package name="com.*" />
 			<link href="${api.link.jdk}"  packagelistLoc="package-list/jdk"  offline="true" />
 			<link href="${api.link.j2ee}" packagelistLoc="package-list/j2ee" offline="true" />
+			<arg value="${api.doclint}" />
 			<classpath>
 				<pathelement location="lib/servlet-api.jar" />
 				<pathelement location="lib/exedio-cope-util.jar" />
