--- a/ivy.xml
+++ b/ivy.xml
@@ -12,15 +12,17 @@
 	</info>
 	<configurations>
 		<conf name="runtime" />
+		<conf name="sources" />
+		<conf name="changelog" />
 		<conf name="build" extends="runtime" visibility="private" />
 	</configurations>
 	<publications>
-		<artifact name="exedio-cops" />
-		<artifact name="exedio-cops" type="src" ext="zip" />
-		<artifact name="exedio-cops" type="log" ext="txt" />
+		<artifact name="exedio-cops" conf="runtime"   type="jar" ext="jar" />
+		<artifact name="exedio-cops" conf="sources"   type="src" ext="zip" />
+		<artifact name="exedio-cops" conf="changelog" type="log" ext="txt" />
 	</publications>
 	<dependencies>
-		<dependency org="javax.servlet" name="servlet-api" rev="2.4" />
+		<dependency org="javax.servlet" name="servlet-api" rev="2.4" conf="runtime->default; build->sources" />
 		<dependency org="org.slf4j" name="slf4j-api" rev="1.6.4">
 			<conf name="runtime" mapped="default" />
 			<conf name="build" mapped="sources" />
@@ -28,7 +30,7 @@
 		<dependency org="org.slf4j" name="slf4j-log4j12" rev="1.6.4" conf="build->default" />
 		<dependency org="junit" name="junit" rev="4.4" conf="build->default" />
 		<dependency org="findbugs-x" name="findbugs" rev="3.0.0" conf="build->default" />
-		<dependency org="com.exedio" name="copeutil" rev="306" />
-		<dependency org="com.exedio" name="jspm"     rev= "89" conf="build->runtime" />
+		<dependency org="com.exedio" name="copeutil" rev="483" conf="runtime->runtime; build->runtime,sources,changelog" />
+		<dependency org="com.exedio" name="jspm"     rev="123" conf="build->runtime,changelog" />
 	</dependencies>
 </ivy-module>
