--- a/ivy/build.xml
+++ b/ivy/build.xml
@@ -2,25 +2,21 @@
 <project name="ivy" default="copy">
 	<import file="common.xml" />
 	<target name="copy" depends="resolve">
+
 		<delete dir="../lib">
 			<include name="*" />
 			<exclude name="ant-contrib.jar" />
 			<exclude name="apache-tomcat.tar.gz" />
 			<exclude name="catalina.jar" />
 		</delete>
-		<copy overwrite="true" file="artifacts/exedio-cope-util-jar.jar" tofile="../lib/exedio-cope-util.jar" />
-		<copy overwrite="true" file="artifacts/exedio-cope-util-log.txt" tofile="../lib/exedio-cope-util.jar-CHANGELOG" />
-		<copy overwrite="true" file="artifacts/exedio-cope-util-src.zip" tofile="../lib/exedio-cope-util.jar-src.zip" />
-		<copy overwrite="true" file="artifacts/exedio-jspm-jar.jar" tofile="../lib/exedio-jspm.jar" />
-		<copy overwrite="true" file="artifacts/exedio-jspm-log.txt" tofile="../lib/exedio-jspm.jar-CHANGELOG" />
-		<copy overwrite="true" file="artifacts/servlet-api-jar.jar" tofile="../lib/servlet-api.jar" />
-		<copy overwrite="true" file="artifacts/servlet-api-source.jar" tofile="../lib/../lib/servlet-api.jar-src.zip" />
-		<copy overwrite="true" file="artifacts/junit-jar.jar" tofile="../lib/junit.jar" />
-		<copy overwrite="true" file="artifacts/slf4j-api-jar.jar" tofile="../lib/slf4j-api.jar" />
-		<copy overwrite="true" file="artifacts/slf4j-api-source.jar" todir="../lib" />
-		<copy overwrite="true" file="artifacts/slf4j-log4j12-jar.jar" tofile="../lib/slf4j-log4j12.jar" />
-		<copy overwrite="true" file="artifacts/log4j-bundle.jar" todir="../lib" />
-		<copy overwrite="true" file="artifacts/findbugs-dist.tar.gz" tofile="../lib/findbugs.tar.gz" />
-		<copy overwrite="true" file="artifacts/findbugs-annotations-jar.jar" tofile="../lib/findbugs-annotations.jar" />
+		<copy overwrite="true" todir="../lib">
+			<firstmatchmapper>
+				<globmapper from="*-jar.jar" to="*.jar" />
+				<globmapper from="*-dist.tar.gz" to="*.tar.gz" />
+				<globmapper from="*" to="*" />
+			</firstmatchmapper>
+			<fileset dir="artifacts/lib">
+			</fileset>
+		</copy>
 	</target>
 </project>
