--- a/ivy.xml
+++ b/ivy.xml
@@ -32,5 +32,6 @@
 		<dependency org="findbugs-x" name="findbugs" rev="3.0.0" conf="build->default" />
 		<dependency org="com.exedio" name="copeutil" rev="483" conf="runtime->runtime; build->runtime,sources,changelog" />
 		<dependency org="com.exedio" name="jspm"     rev="123" conf="build->runtime,changelog" />
+		<dependency org="org.apache" name="apache-tomcat" rev="6.0.16" conf="build->default" />
 	</dependencies>
 </ivy-module>
