--- a/build.xml
+++ b/build.xml
@@ -407,4 +407,8 @@
 		</copy>
 	</target>
 
+	<target name="publishlocally" depends="jar, jar.src">
+		<ant dir="ivy" target="publishlocally" />
+	</target>
+
 </project>
