--- a/ivy.xml
+++ b/ivy.xml
@@ -32,6 +32,8 @@
 		<dependency org="findbugs-x" name="findbugs" rev="3.0.0" conf="build->default" />
 		<dependency org="com.exedio" name="copeutil" rev="807" conf="runtime->runtime; build->runtime,sources,changelog" />
 		<dependency org="com.exedio" name="jspm"     rev="202" conf="build->runtime,changelog" />
-		<dependency org="org.apache" name="apache-tomcat" rev="7.0.67" conf="build->default" />
+		<dependency org="org.apache.tomcat" name="tomcat" rev="7.0.67" conf="build->default">
+			<artifact name="tomcat" type="tar.gz" />
+		</dependency>
 	</dependencies>
 </ivy-module>
