--- a/ivy/build.xml
+++ b/ivy/build.xml
@@ -12,6 +12,7 @@
 			<firstmatchmapper>
 				<globmapper from="*-jar.jar" to="*.jar" />
 				<globmapper from="*-dist.tar.gz" to="*.tar.gz" />
+				<globmapper from="*-tar.gz.tar.gz" to="*.tar.gz" />
 				<globmapper from="*" to="*" />
 			</firstmatchmapper>
 			<fileset dir="artifacts/lib">
