ExampleService added, showcase for: Properties.Field#getString etc. used
shows that properties of java.lang.Class use #toString(),
which prepends a "class " to the classname, which cannot be parsed by Class#forName.

--- a/example/web/WEB-INF/normal.properties
+++ b/example/web/WEB-INF/normal.properties
@@ -7,5 +7,6 @@ hidden.3=value of hidden.3
 setToDefault.string=value of setToDefault.string
 setToDefault.int=1234
 setToDefault.boolean=true
+service=com.exedio.cops.example.ExampleServiceImplementationSet
 orphaned1=value of orphaned
 orphaned2=value of orphaned
