--- a/ivy.xml
+++ b/ivy.xml
@@ -31,6 +31,7 @@
 		<dependency org="junit" name="junit" rev="4.4" conf="build->default" />
 		<dependency org="findbugs-x" name="findbugs" rev="3.0.0" conf="build->default" />
 		<dependency org="com.exedio" name="copeutil" rev="856" conf="runtime->runtime; build->runtime,sources,changelog" />
+		<dependency org="com.exedio" name="copeservletutil" rev="107" conf="build->runtime,sources,changelog" />
 		<dependency org="com.exedio" name="jspm"     rev="202" conf="build->runtime,changelog" />
 		<dependency org="org.apache.tomcat" name="tomcat" rev="7.0.67" conf="build->default">
 			<artifact name="tomcat" type="tar.gz" />
