JenkinsfileIdea added, idea 2018.3.5 inspections fixed/suppressed

--- a/build.xml
+++ b/build.xml
@@ -2,6 +2,7 @@
 
 <project name="cops" default="build" basedir=".">
 
+	<!--suppress AntMissingPropertiesFileInspection -->
 	<property file="local.properties" />
 	<property file="project.properties" />
 
