--- a/ivy.xml
+++ b/ivy.xml
@@ -28,6 +28,9 @@
 			<conf name="runtime" mapped="default" />
 			<conf name="build" mapped="sources" />
 		</dependency>
+		<dependency org="ant-contrib" name="ant-contrib" rev="1.0b3" conf="build->default">
+			<exclude org="ant" module="ant" />
+		</dependency>
 		<dependency org="org.slf4j" name="slf4j-log4j12" rev="1.6.4" conf="build->default" />
 		<dependency org="io.micrometer" name="micrometer-core" rev="1.3.0" conf="runtime->default; build->sources">
 			<exclude org="org.hdrhistogram" module="HdrHistogram" />
