ant scripts show versions of ant and java

--- a/build.xml
+++ b/build.xml
@@ -2,6 +2,8 @@
 
 <project name="cops" default="build" basedir=".">
 
+	<echo taskname="which ant" message="${ant.version}" />
+	<echo taskname="which java" message="${java.vm.name} ${java.version}" />
 	<!--suppress AntMissingPropertiesFileInspection -->
 	<property file="local.properties" />
 	<property file="project.properties" />
