--- a/build.xml
+++ b/build.xml
@@ -411,7 +411,7 @@
 			<fileset file="${basedir}/build/exedio-cops-src.zip" />
 			<fileset file="${basedir}/exedio-cops-log.txt" />
 		</copy>
-		<copy file="ivy.xml" tofile="build/success/ivy.xml" overwrite="true">
+		<copy file="ivy/ivy.xml" todir="build/success" overwrite="true">
 			<filterset>
 				<filter token="BUILD_REVISION" value="${build.revision}" />
 				<filter token="BUILD_STATUS"   value="${build.status}" />
